[package]
name = "parcel"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"
keywords = ["encoding", "decoding", "hexadecimal", "binary", "cli", "command-line"]
description = "Command line tool for converting binary data to and from hexadecimal"
license = "MIT"
readme = "README.markdown"

[dependencies]
clap = "2.32.0"
