[package]
name = "hew"
version = "0.2.4"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"
keywords = ["encoding", "decoding", "hexadecimal", "binary", "cli"]
description = "Command line tool for converting binary data to and from hexadecimal"
license = "MIT"
readme = "README.markdown"
repository = "https://github.com/nsmryan/hew"

[dependencies]
clap = "2.32.0"
flame = { version = "0.2", optional = true }

[dev-dependencies]
quickcheck = "0.6"

[features]
profile = ["flame"]

[profile.release]
debug = true
lto = true
opt-level = 3
